--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
+<h1>05.10.2018</h1>
+<p>Lorem ipsum</p>
 </body>
 </html>
