--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lab 1 - Kacper Onak</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
