--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Lab 1 - Kacper Onak</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 <h1>05.10.2018</h1>
 <p>Lorem ipsum</p>
-<ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
+<ul class="nav navbar-nav">
+    <li><a href="#">Strona główna</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Quiz</a></li>
+    <li><a href="#">Kontakt</a></li>
 </ul>
 </body>
 </html>
