--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 </head>
 
 <body>
+<div class="row">
+    <ul class="nav navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Strona główna</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Quiz</a></li>
+        <li class="nav-item">
+            <a class="nav-link" href="kontakt.html">Kontakt</a></li>
+    </ul>
+</div>
 <h1>05.10.2018</h1>
 <p>Lorem ipsum</p>
-<ul class="nav navbar-nav">
-    <li><a href="#">Strona główna</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">Quiz</a></li>
-    <li><a href="#">Kontakt</a></li>
-</ul>
 </body>
 </html>
