--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 </head>
 
 <body>
-<div class="row">
-    <ul class="nav navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="index.html">Strona główna</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Quiz</a></li>
-        <li class="nav-item">
-            <a class="nav-link" href="kontakt.html">Kontakt</a></li>
-    </ul>
-</div>
+<ul class="nav navbar-nav">
+    <li class="nav-item">
+        <a class="nav-link" href="index.html">Strona główna</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Quiz</a></li>
+    <li class="nav-item">
+        <a class="nav-link" href="kontakt.html">Kontakt</a></li>
+</ul>
 <h1>05.10.2018</h1>
-<p>Lorem ipsum</p>
+<p class="col-sm-9">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
+    Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
 </body>
 </html>
